<resources>
    <string name="app_name">AppBanco</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="hintPassword">*********</string>
    <string name="helloweeniski_gmail_com">helloweeniski@gmail.com</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="log_in">Log in</string>
    <string name="logo">logo</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="RadiusButton">20dp</string>
    <string name="HeightButton">60dp</string>
</resources>